# xbar-shortcut

./: Cargo.toml  flake.nix
.github/workflows/: ci.yml  update_nix.yml
src/: main.rs  shortcut.rs
