[package]
name = "xbar-shortcut"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive", "color", "env"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
slugify = "0.1.0"
tokio = { version = "1.39.2", features = ["full"] }
